--- a/view/style.css
+++ b/view/style.css
@@ -1,4 +1,130 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;600;700;900&display=swap');
 
-    background-color: rgb(228, 209, 45);
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 20px;
 }
+
+body {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #bb94df;
+}
+
+.container {
+    width: 80%;
+    height: 80vh;
+    display: flex;
+
+}
+
+.form-image {
+    background-color: #610f5a;
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem;
+}
+
+.form-image img {
+    width: 31rem;
+}
+
+.form {
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column; 
+    background-color: rgb(240, 240, 240);
+    padding: 3rem;
+}
+
+.form-header{
+    margin-bottom: 3rem;
+    display: flex;
+    justify-content: space-between;
+
+
+}
+
+
+.input-group{
+
+    flex-direction: column;
+    align-items: center;
+    
+
+}
+
+.cadastro-button button{
+   margin-top: 15px;
+    border: none;
+    background-color: rgb(131, 30, 106);
+    padding: 0.4rem 1rem;
+    border-radius: 5px;
+    cursor: pointer;
+
+}
+
+.input-box input {
+    margin: 0.6rem 0;
+    padding: 0.8rem 1.2rem;
+    border: none;
+    border-radius: 10px;
+    box-shadow: 1px 1px 6px black;
+}
+
+.input-box input:hover {
+    background-color: rgba(20, 16, 20, 0.336);
+}
+
+.input-box input:focus-visible {
+    outline: 2px solid rgb(160, 44, 135);
+
+
+}
+.cadastro-button button:hover{
+    background-color: rgb(9, 243, 60);
+}
+
+.buttonText{
+    color: azure;
+}
+
+.title h1::after{
+    content: '';
+    display: block;
+    width: 5rem;
+    height: 0.3rem;
+    background-color: #610f5a;
+    margin: 0 auto;
+    position: absolute;
+    border-radius: 10px;
+
+}
+
+
+/*
+@media screen and (max-width: 1064px ){
+    .container{
+        width: 90%;
+        height: auto;
+    }
+
+    .input-group{
+        flex-direction: column;
+        
+        flex-wrap: nowrap;
+        max-height: 10rem;
+        padding-right: 5rem;
+    }
+}
+*/
