--- a/view/index.html
+++ b/view/index.html
@@ -9,17 +9,53 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="d-flex justify-content-center">
-        <div class="spinner-border" role="status" id="loading">
-            <span class="sr-only"></span>
 
 
+    <div class="container">
+        
+        <div class="form-image">
+            <img src="./img/undraw_shopping_app_flsj.svg" alt="shopping">
         </div>
 
 
-    </div>
-    <p class="h1 text-center">Cadastro de Produtos</p>
-    <p id="nomeProduto"></p>
+        <div class="form">
+
+            <div class="form-header">
+                <div class="spinner-border" role="status" id="loading">
+                   <span class="sr-only"></span>
+                </div>
+                <div class="form-header">
+                    <div class="title">
+                        <p id="textoPrincipal" class="h1 text-center">Cadastro de Produtos</p>
+                    </div>
+                </div>
+            </div>
+                    
+            <div class="input-group">
+
+                        <div class="input-box">
+                            <label id="nomeProdutoLabel" for="nomeProduto"> <h6>Nome do Produto: </h6> </label>
+                            <input type="text" id="nomeProduto" name="nomeProduto" placeholder="Nome">
+                        </div>
+
+                        <div class="input-box">
+                            <label for="valorProduto"> <h6>Valor do Produto: </h6> </label>
+                            <input type="number" id="valorProduto" name="valorProduto" placeholder="Preço" step="0.01" min="0.00">
+                        </div>
+
+                    <div class="cadastro-button">
+                        <button id="button-cadastro"> <span class="buttonText">Cadastrar</span></button>
+                    </div>
+
+            </div>
+
+        </div>
+                
+        
+    </div>    
+
+
+
 
 
 
