--- a/view/index.html
+++ b/view/index.html
@@ -13,10 +13,27 @@
 
     <div class="container">
         
+      
+
+
+
+        
+       
+        
+
+        <a href="main.html" class="botao-voltar">Menu</a>
+
         <div class="form-image">
+            
+            
+        <form>
+            
+          </form>
+          
             <img src="./img/undraw_shopping_app_flsj.svg" alt="shopping">
         </div>
 
+      
 
         <div class="form">
 
@@ -43,8 +60,13 @@
                             <input type="number" id="valorProduto" name="valorProduto" placeholder="Preço" step="0.01" min="0.00">
                         </div>
 
+                        <div class="input-box">
+                            <label id="descricaoProdutoLabel" for="descricaoProduto"> <h6>Nome do Produto: </h6> </label>
+                            <input type="text" id="descricaoProduto" name="descricaoProduto" placeholder="Descrição: ">
+                        </div>
+
                     <div class="cadastro-button">
-                        <button id="button-cadastro"> <span class="buttonText">Cadastrar</span></button>
+                        <button id="botaoDeCadastro" class="botaoDeCadastro"> <span class="buttonText">Cadastrar</span></button>
                     </div>
 
             </div>
