--- a/view/index.html
+++ b/view/index.html
@@ -61,7 +61,7 @@
                         </div>
 
                         <div class="input-box">
-                            <label id="descricaoProdutoLabel" for="descricaoProduto"> <h6>Nome do Produto: </h6> </label>
+                            <label id="descricaoProdutoLabel" for="descricaoProduto"> <h6>Descrição:   </h6> </label>
                             <input type="text" id="descricaoProduto" name="descricaoProduto" placeholder="Descrição: ">
                         </div>
 
