--- a/view/main.html
+++ b/view/main.html
@@ -3,8 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Menu</title>
     <link rel="stylesheet" href="styleMain.css">
+    <script src="script.js"></script>
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-GLhlTQ8iKDErurrF1oQJYq8Pq7lGC0lHN4jE2ENgGCOfdQMPfE+GLDra25msj4l" crossorigin="anonymous">
+
 </head>
 <body>
 
@@ -13,9 +17,6 @@
       
       
         
-
-       
-    
         
         <div class="quadro">
 
@@ -28,13 +29,14 @@
                 <a  href="index.html">Cadastrar Produto</a>
 
 
-                <a href="index.html">Listar Produtos</a>
+                <a href="catalogo.html" id="listagem">Listar Produtos</a>
+                
 
             </div>
             <div class="contato">
             <h6>Contato: </h6>
-                <a href="index.html">linkedin</a>
-                <a href="index.html">github</a>
+                <a href="https://www.linkedin.com/in/thiago-costa-4909491bb/">linkedin</a>
+                <a href="https://github.com/ThiagoCosta01">github</a>
              </div>
         </div>            
         </div> 
